--- a/pom.xml
+++ b/pom.xml
@@ -9,13 +9,12 @@
 		<version>2.1.3.RELEASE</version>
 		<relativePath />
 	</parent>
-	<groupId>com.dvlcube.license.manager</groupId>
+	<groupId>com.dvlcube.app</groupId>
 	<artifactId>dvl-app</artifactId>
 	<version>1.0.1</version>
 	<packaging>jar</packaging>
 
-	<name>Idle Heroes Manager</name>
-	<description>DVL - License Server</description>
+	<name>Heroes Manager</name>
 
 	<properties>
 		<java.version>11</java.version>
