test tool updates

--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 	<version>1.0.1</version>
 	<packaging>jar</packaging>
 
-	<name>Heroes Manager</name>
+	<name>Manager</name>
 
 	<properties>
 		<java.version>11</java.version>
