Enable Swagger for doc API
* added configuration for Swagger API
* added library Lombok

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -35,7 +35,7 @@ spring:
     jpa:
         show-sql: true
         hibernate:
-            ddl-auto: update
+            ddl-auto: validate
             format_sql: true
             jdbc:
                 lob:
@@ -46,6 +46,8 @@ spring:
             hibernate:
                 format_sql: true
                 dialect: org.hibernate.dialect.MySQL5Dialect  
-            
+
+    message: api
+
     quartz:
         job-store-type: jdbc
