--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -33,9 +33,10 @@ spring:
         driverClassName: com.mysql.cj.jdbc.Driver
         
     jpa:
+        database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
         show-sql: true
         hibernate:
-            ddl-auto: validate
+            ddl-auto: update
             format_sql: true
             jdbc:
                 lob:
@@ -45,7 +46,7 @@ spring:
         properties:
             hibernate:
                 format_sql: true
-                dialect: org.hibernate.dialect.MySQL5Dialect  
+                dialect: org.hibernate.dialect.MySQL5InnoDBDialect
 
     message: api
 
