--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,11 @@ spring.datasource.username=man
 spring.datasource.password=pass123
 spring.quartz.job-store-type=jdbc
 
-dvl.rest.prefix=/api
+# Custon property. I added the prefix "dvl" to maintain the existing pattern.
+dvl.linkedin.name=victor-pinho-208779a8
+
+# Modified the Rest prefix variable according to the first three characters of the "linkedin.name" variable value.
+dvl.rest.prefix=/vic
 dvl.project.version=@project.version@
 
 # java.sql.SQLFeatureNotSupportedException: Method org.postgresql.jdbc.PgConnection.createClob() is not yet implemented.
@@ -18,7 +22,8 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 #spring.quartz.properties.org.quartz.jobStore.driverDelegateClass=org.quartz.impl.jdbcjobstore.PostgreSQLDelegate
 
-server.port=6080
+# The application received the prefix "118", which refers to the first character of my username on Linkedin in the ASCII table.
+server.port=11880
 
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
