Inclusão da dependência 'dvl-core' e configuração com meu banco postgres. Aplicação subiu git add .!

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-spring.datasource.url=jdbc:postgresql://localhost:5432/ih
-spring.datasource.username=man
-spring.datasource.password=pass123
+spring.datasource.url=jdbc:postgresql://localhost:5432/dvl
+spring.datasource.username=postgres
+spring.datasource.password=Vn041019
 spring.quartz.job-store-type=jdbc
 
 # Custon property. I added the prefix "dvl" to maintain the existing pattern.
