--- a/.classpath
+++ b/.classpath
@@ -28,6 +28,6 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/Victor/Desktop/dvl-core.jar"/>
+	<classpathentry kind="lib" path="lib/dvl-core-1.0.1.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
