--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-spring.datasource.url=jdbc:postgresql://localhost:5432/dvl
+spring.datasource.url=jdbc:postgresql://localhost:5432/ih
 spring.datasource.username=postgres
 spring.datasource.password=Vn041019
 spring.quartz.job-store-type=jdbc
 
 # Custon property. I added the prefix "dvl" to maintain the existing pattern.
-dvl.linkedin.name=victor-pinho-208779a8
+linkedin.name=victor-pinho-208779a8
 
 # Modified the Rest prefix variable according to the first three characters of the "linkedin.name" variable value.
 dvl.rest.prefix=/vic
@@ -25,9 +25,9 @@ spring.jpa.hibernate.ddl-auto=update
 # The application received the prefix "118", which refers to the first character of my username on Linkedin in the ASCII table.
 server.port=11880
 
-spring.jpa.show-sql=false
+spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 # logging
-logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=DEBUG
-dvl.rest.debug.payLoad=false
+#logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=DEBUG
+#dvl.rest.debug.payLoad=false
