Criação de card no index.html

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,5 +29,5 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 # logging
-#logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=DEBUG
-#dvl.rest.debug.payLoad=false
+logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=DEBUG
+dvl.rest.debug.payLoad=false
