Get /stats retorna ordenado por total e avg. Atualizado a lib dvl-core.1.0.4

--- a/.classpath
+++ b/.classpath
@@ -28,6 +28,6 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="lib/dvl-core-1.0.0.jar"/>
+	<classpathentry kind="lib" path="lib/dvl-core.1.0.4.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
