Fix import for dvl.core dependency and add configuration on application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.username=man
 spring.datasource.password=pass123
 spring.quartz.job-store-type=jdbc
 
-dvl.rest.prefix=/api
+dvl.rest.prefix=/htt
 dvl.project.version=@project.version@
 
 # java.sql.SQLFeatureNotSupportedException: Method org.postgresql.jdbc.PgConnection.createClob() is not yet implemented.
@@ -18,7 +18,8 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 #spring.quartz.properties.org.quartz.jobStore.driverDelegateClass=org.quartz.impl.jdbcjobstore.PostgreSQLDelegate
 
-server.port=6080
+linkedin.name=https://www.linkedin.com/in/vitorhenriquec/
+server.port=10680
 
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
