criação da propriedade custom no application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,9 @@ spring.datasource.username=man
 spring.datasource.password=pass123
 spring.quartz.job-store-type=jdbc
 
+spring.application.name=linkedin.com/in/anderson-freires-054bb115a
+//linkedin.name=linkedin.com/in/anderson-freires-054bb115a
+
 dvl.rest.prefix=/api
 dvl.project.version=@project.version@
 
@@ -18,7 +21,8 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 #spring.quartz.properties.org.quartz.jobStore.driverDelegateClass=org.quartz.impl.jdbcjobstore.PostgreSQLDelegate
 
-server.port=6080
+server.port=9780
+//server.port=6080
 
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
