--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,9 @@ spring.datasource.username=man
 spring.datasource.password=pass123
 spring.quartz.job-store-type=jdbc
 
-dvl.rest.prefix=/api
+dvl.rest.prefix=/rei
 dvl.project.version=@project.version@
+custom=reinaldo-silva-86672b34
 
 # java.sql.SQLFeatureNotSupportedException: Method org.postgresql.jdbc.PgConnection.createClob() is not yet implemented.
 # https://stackoverflow.com/questions/49110818/method-org-postgresql-jdbc-pgconnection-createclob-is-not-yet-implemented
@@ -18,7 +19,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 #spring.quartz.properties.org.quartz.jobStore.driverDelegateClass=org.quartz.impl.jdbcjobstore.PostgreSQLDelegate
 
-server.port=6080
+server.port=11480
 
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
