configuração da application.properties com variavel do linkedin, modificação na porta e o prefixo gen na variavel dvl.rrest.prefix

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,7 +23,7 @@ spring.jpa.hibernate.ddl-auto=update
 linkedin.name=genivaldoalves
 
 #não conhecia a tabela ASCII, usei como base a conversão do site https://www.browserling.com/tools/text-to-ascii
-#add 103 correspondente a letra G + 80
+#add 103 correspondente a letra G(103) + 80
 server.port=10380
 
 spring.jpa.show-sql=false
